Fixed overflow-y of the the sidebar for small screens

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -149,7 +149,7 @@ h1, h2, h3, h4, h5, h6 {
     display: block;
     padding: $sidebar-padding;
     overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: auto;
     background-color: $color-green;
     color: white;
 
